# TDSE

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  TODO.md  build.JILIAC  build.MAC  build.PHOTON  build.SUMMITCU  clean  config.h  config.status  config_doxygen  configure  configure.ac  input.json  slurm_daisychain  trial.py
analysis/: #cut.py#  #fft_woECS.py#  2d_fft.py  Wave_all.py  ac_stark.py  circTest.py  circle.py  cut.py  e_spec_fold.py  e_spec_fold_bessel.py  elliptical.py  energy_spec.py  energy_spec_folders.py  fft_woECS.py  find_peaks_2d.py  get_ionization.py  get_populations.py  get_w.py  hhg_vs_intensity.py  integrateCircle.py  momentum.py  observables.py  observables_file.py  observables_folders.py  photons_vs_states.py  plotBoth.py  plot_pulses.ipynb  projection_heat.py  projections.py  pulse_plot.py  pulses.py  scale_test.py  spherical_3D_PAD.py  spherical_3D_PAD_ground_state.py  spherical_fft.py  spherical_k_vec.py  (+15 more)
src/: #Simulation.cpp#  HDF5Wrapper.cpp  HDF5Wrapper.h  Hamiltonian.cpp  Hamiltonian.h  Makefile  Makefile.JILIAC  Makefile.MAC  Makefile.SUMMITCU  Makefile.am  Makefile.in  Observables.cpp  Observables.h  PETSCWrapper.cpp  PETSCWrapper.h  Parameters.cpp  Parameters.h  Pulse.cpp  Pulse.h  Simulation.cpp  Simulation.h  TDSE.cpp  Utils.cpp  Utils.h  ViewWrapper.cpp  ViewWrapper.h  Wavefuction.cpp  Wavefuction.h  Wavefunction.cpp  Wavefunction.h  jacobi_polynomial.cpp  jacobi_polynomial.hpp  json.hpp
src/.deps/: Hamiltonian.Po  Observables.Po  Parameters.Po  Pulse.Po  Simulation.Po  TDSE.Po  Wavefuction.Po  json.Po
(+57 files in other folders)
