# what flags you want to pass to the C compiler & linker
AM_CXXFLAGS =-Wall -std=c++11 
AM_LDFLAGS =

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = TDSE
TDSE_SOURCES = TDSE.cpp Parameters.h json.cpp Hamiltonian.h Observables.h Simulation.h Wavefunction.h Pulse.h Hamiltonian.cpp Parameters.cpp Simulation.cpp Wavefunction.cpp Observables.cpp Pulse.cpp HDF5Wrapper.h HDF5Wrapper.cpp
